# tone-generator

./: README.md  main.cpp  main2.cpp  new file
bineural/: CMakeLists.txt  Makefile  main.cpp  mainold.cpp  test.pro
qt/: CMakeLists.txt  main.cpp
qt5/: main.cpp
qt6/: main.cpp  test.pro
qtSDL/: CMakeLists.txt  main.cpp
